# TODO

./: README.md  pyproject.toml  streamlit_app.py
src/: streamlit_app.py
src/todoapp/: __init__.py  __main__.py  analytics.py  cli.py  commands.py  enums.py  events.py  exceptions.py  models.py  repository.py  service.py  sorting.py  specifications.py
tests/: test_todoapp.py
